# Elearning-platform

./: .gitignore  pyproject.toml
elearning/courses/: admin.py  apps.py  fields.py  forms.py  models.py  urls.py  views.py
elearning/courses/fixtures/: subjects.json
elearning/courses/migrations/: 0001_initial.py  0002_video_text_image_file_content.py  0003_module_order_alter_content_content_type.py  0004_alter_content_options_alter_module_options_and_more.py  0005_alter_course_options_alter_module_course.py
elearning/courses/templates/: base.html
elearning/courses/templates/courses/manage/content/: content_list.html
elearning/courses/templates/courses/manage/course/: list.html
elearning/elearning/: settings.py  urls.py
