[tool.poetry]
name = "elearning-platform"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "elearning_platform"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
pillow = "^9.5.0"
psycopg = "^3.1.9"
python-dotenv = "^1.0.0"
django-braces = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
